--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
-numpy>=1.24.0
-pandas>=2.0.0
-scikit-learn>=1.0.0
-matplotlib>=3.0.0
-seaborn>=0.12.0
-ConfigSpace
-smac
-pre-commit
-black
-flake8
-langchain>=0.2.2
-langchain-huggingface>=0.0.6
-chromadb>=0.4.0
-torch==2.1.0
-transformers==4.36.0
-sentence-transformers==2.2.2
-tiktoken>=0.5.0
-ipywidgets>=8.0.0  # For tqdm in notebooks
+keras
+streamlit
+pandas
+numpy
+matplotlib
+scikit-learn
+langchain
+tensorflow
+google-genai
+seaborn
+statsmodel
+langchain-groq
+openml
+torch
+langchain_huggingface
+langchain-community
+amltk
+instructor
+jsonref
+py-experimenter
+imblearn
