--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,5 +15,5 @@ repos:
         additional_dependencies: []
         args: [
           '--max-line-length=150',
-          '--ignore=E203,F541,F401,F841'  # Added F541 (f-string without placeholders), F401 (unused imports), F841 (unused variables)
+          '--ignore=E203,F541,F401,F841,E402'  # Added F541 (f-string without placeholders), F401 (unused imports), F841 (unused variables)
         ]
