--- a/baselines/autogluon/autogluon_config.yml
+++ b/baselines/autogluon/autogluon_config.yml
@@ -5,17 +5,17 @@ PY_EXPERIMENTER:
     provider: mysql
     database: AgentSmac
     table:
-      name: AutogluonRuns
+      name: AutogluonRuns_test_images
       keyfields:
         dataset_origin:
           type: VARCHAR(255)
           values: ['openml']
         dataset_name:
           type: VARCHAR(255)
-          values: ['credit-g']
+          values: ['41983']
         dataset_type:
           type: VARCHAR(255)
-          values: ['tabular']
+          values: ['image']
         time_budget:
           type: int
           values: [3600]
