--- a/config/experimenter-config.yml
+++ b/config/experimenter-config.yml
@@ -5,14 +5,14 @@ PY_EXPERIMENTER:
     provider: mysql
     database: AgentSmac
     table:
-      name: AgentSmacEvaluation
+      name: AgentSmacRuns_tabular
       keyfields:
         dataset_origin:
           type: VARCHAR(255)
           values: ['openml']
         dataset_name:
           type: VARCHAR(255)
-          values: ['credit-g']
+          values: ['openml']
         dataset_type:
           type: VARCHAR(255)
           values: ['tabular']
@@ -24,10 +24,11 @@ PY_EXPERIMENTER:
           values: ['llama-3.3-70b-instruct']
         dataset_openml_id:
           type: int
-          values: [31]  # Default to credit-g dataset ID
+          values: [1489]
+          # values: [1489, 23517, 28, 715, 752, 772, 807, 354]  # Default to credit-g dataset ID
         time_budget:
           type: int
-          values: [3600]
+          values: [21600]
         metric:
           type: VARCHAR(255)
           values: ['accuracy']
