--- a/config/experimenter-config.yml
+++ b/config/experimenter-config.yml
@@ -7,7 +7,7 @@ PY_EXPERIMENTER:
     table:
       # name: AgentSmacRuns_image_fashionmnist
       # name: AgentSmacRuns_tabular_regression_44973
-      name: AgentSmacRuns_image_fashionmnistv2
+      name: AgentSmacRuns_715_tabular_classification
       # name: AgentSmacRuns_tabular_v5
       keyfields:
         dataset_origin:
@@ -15,12 +15,13 @@ PY_EXPERIMENTER:
           values: ['openml']
         dataset_name:
           type: VARCHAR(255)
-          values: ['fashion-mnist']
+          # values: ['fashion-mnist']
+          values: ['715']
           # values: ['tabular44973'] 
         dataset_type:
           type: VARCHAR(255)
-          values: ['image']
-          # values: ['tabular']
+          # values: ['image']
+          values: ['tabular']
         task_type:
           type: VARCHAR(255)
           values: ['classification']
@@ -30,7 +31,7 @@ PY_EXPERIMENTER:
         dataset_openml_id:
           type: int
           # values: [1489, 23517, 28, 715, 752, 772, 807]
-          values: [40996] # Fashion MNIST
+          values: [715] # Credit-G
           # values: [40926] # CIFAR-10
           # values: [44973]
           # values: [1489, 23517, 28, 715, 752, 772, 807, 354, 31]  # Default to credit-g dataset ID
@@ -67,6 +68,6 @@ PY_EXPERIMENTER:
         test_f1: FLOAT
         test_precision: FLOAT
         test_recall: FLOAT
-        log_dir: VARCHAR(255)
+        log_dir: VARCHAR(1000)
   Custom:
     datapath: sample_data
